--- a/css/templates/template-sidebar-left.css
+++ b/css/templates/template-sidebar-left.css
@@ -11,6 +11,7 @@ body.login.template-sidebar-left {
     align-items: stretch;
     justify-content: flex-start; /* Alineado a la izquierda */
     min-height: 100vh;
+    overflow: hidden; /* Prevenir scroll innecesario */
 }
 
 body.login.template-sidebar-left div#login {
